<resources>
    <string name="app_name">Helep</string>

    <string name="username">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">SUDAH PUNYA AKUN? <font color="#FF3300">LOGIN</font></string>
    <string name="berhasil">Berhasil!</string>
    <string name="masukan_email_valid">Tolong masukan email yang valid</string>
    <string name="password_pendek">Password minimal 6 karakter!</string>
    <string name="password_tidak_sama">Password tidak sama!</string>
    <string name="isi_semua_form">Mohon untuk mengisi semua form!</string>

    <string name="app_description">“Solusi mencari bantuan anti ribet”</string>
    <string name="forgot_password">Forgot password</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="belum_punya_akun">BELUM PUNYA AKUN? <font color="#FF3300">DAFTAR</font></string>
    <string name="salah_input">Email / password yang dimasukan salah!</string>

    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="chat_count">3</string>

    <!--    Begin: Home-->
    <string name="topup">Top Up</string>
    <string name="view_history">View History</string>
    <string name="helepoin">Helepoin</string>
    <string name="_10.000">10.000</string>
    <string name="goals">Goals</string>
    <string name="post_10_tasks">Post 10 tasks</string>
    <string name="_5_10">5/10</string>
    <string name="_1000_helepoin">1000 Helepoin</string>
    <string name="finish_10_task">Finish 10 tasks</string>
    <string name="_8_10">8/10</string>
    <string name="rekomendasi_task">Rekomendasi Task</string>
    <!--    End: Home-->

    <!--    Begin: Top Up-->
    <string name="_25000">25000</string>
    <string name="_50000">50000</string>
    <string name="_100000">100000</string>
    <string name="_250000">250000</string>
    <string name="_500000">500000</string>
    <string name="_1000000">1000000</string>
    <string name="_0">0</string>
    <!--    End: Top Up-->

    <!--    Begin: Find Task-->
    <string name="find_tasks">Find Tasks</string>
    <string name="daftar_tasks">Daftar Task</string>
    <string name="terdekat">Terdekat</string>
    <string name="termahal">Termahal</string>
    <string name="_1km">1 Km</string>
    <string name="detail">Detail</string>

    <string name="detail_task">Detail Task</string>
    <string name="task_diminta">Task Diminta</string>
    <string name="persetejuan_pembayaran">Persetujuan Pembayaran</string>
    <string name="setuju">Setuju</string>
    <string name="tidak_setuju">Tidak Setuju</string>
    <string name="ajuan_perubahan">Ajuan Perubahan</string>
    <string name="terima">Terima</string>
    <string name="task_count">x%d</string>

    <string name="task_diterima">Task Diterima</string>
    <string name="mohon_menunggu">Mohon menunggu konfirmasi dari pembuat task</string>
    <string name="telah_masuk_ke_saldo_wallet">%s\nTelah masuk ke saldo wallet anda</string>
    <!--    End: Find Task-->
    <!--    Begin: Post-->
    <string name="post_tasks">Post Tasks</string>
    <string name="on_progress">On Progress</string>
    <string name="progress">Progress</string>
    <string name="postingan_anda">Postingan Anda</string>
    <string name="pilih_helper">Pilih Helper</string>

    <string name="buat_task">Buat Task</string>
    <string name="pilih_kategori">Pilih Kategori</string>
    <string-array name="categories">
        <item name="makanan">Makanan</item>
        <item name="minuman">Minuman</item>
        <item name="obat">Obat</item>
        <item name="service">Service</item>
        <item name="edukasi">Edukasi</item>
        <item name="permainan">Permainan</item>
    </string-array>
    <string-array name="task_count">
        <item name="0">0</item>
        <item name="1">1</item>
    </string-array>
    <string name="tulis_deskripsi_singkat">Tulis Deskripsi Singkat</string>
    <string name="tulis_disini">Tuliskan disini....</string>
    <string name="buat_task_yang">Buat Task Yang Akan Diselesaikan</string>
    <string name="bayaran">Bayaran</string>
    <string name="per_task">/ Task</string>
    <string name="task">Task</string>
    <string name="masukan_biaya">Masukan biaya disini</string>
    <string name="task_disimpan">Task telah disimpan</string>

    <string name="pilih_helpers">Pilih Helpers</string>
    <string name="lihat_progress">Lihat Progress</string>
    <string name="pilih">Pilih</string>
    <string name="tolak">Tolak</string>

    <string name="pembayaran">Pembayaran</string>
    <string name="keterangan">Keterangan</string>
    <string name="order_id">Order ID: </string>
    <string name="task_cap">TASK%d</string>
    <string name="dibantu_oleh">Dibantu Oleh:</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="wallet">Wallet</string>
    <string name="google_play">Google Play</string>
    <string name="bayar">Bayar</string>

    <string name="task_yang_telah_diselesaikan">Task Yang Telah Diselesaikan</string>
    <string name="_100">100%</string>
    <string name="done">Done</string>
    <string name="jarak_yang_ditempuh">Jarak yang DItempuh</string>
    <string name="waktu_yang_digunakan">Waktu Yang Ditempuh</string>
    <string name="selesai">Selesai</string>
    <string name="report">Report</string>

    <string name="task_selesai">Task Selesai</string>
    <string name="follow_user">Follow User</string>
    <string name="ulasan">Ulasan</string>
    <string name="kembali">Kembali</string>
    <!--    End: Post-->
    <!--    Begin: Chat-->
    <string name="chats">Chats</string>
    <string name="donate">Donate</string>
    <string name="give_task">Give Task</string>
    <string name="chat_anda">Chat Anda</string>
    <!--    End: Chat-->
    <!--    Begin: Profile-->
    <string name="edit_profile">Edit Profile</string>
    <string name="stop_helep">Stop Helep</string>
    <string name="_5">5.0</string>
    <string name="pengikut">3\nPengikut</string>
    <string name="diikuti">54\nDiikuti</string>
    <string name="penyelesaian">100%\nPenyelesaian</string>
    <string name="_5_bracket">(5)</string>
    <string name="_0_bracket">(0)</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="name">Name</string>
    <string name="konfirmasi">Konfirmasi</string>
    <!--    End: Profile-->

</resources>