<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.topUp.TopUpActivity"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24" />

    <TextView
        android:id="@+id/tv_topup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/topup"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:constraint_referenced_ids="crd_25000,
        crd_50000,
        crd_100000,
        crd_250000,
        crd_500000,
        crd_1000000"
        app:flow_horizontalGap="24dp"
        app:flow_verticalGap="16dp"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_topup"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_pay_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:gravity="center"
        android:hint="@string/masukan_biaya"
        android:inputType="number"
        android:maxLines="1"
        android:minHeight="48dp"
        android:text="@string/_0"
        android:textColor="?android:colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flow" />

    <RadioGroup
        android:id="@+id/rg_payment_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_pay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pay_method"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rb_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/wallet" />

        <RadioButton
            android:id="@+id/rb_google_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/google_play" />
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_25000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_25000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:text="@string/_25000"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_50000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_50000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:text="@string/_50000"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_100000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_100000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:text="@string/_100000"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_250000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_250000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:text="@string/_250000"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_500000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_500000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:text="@string/_500000"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/crd_1000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <TextView
            android:id="@+id/tv_1000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="36dp"
            android:layout_marginVertical="16dp"
            android:text="@string/_1000000"
            android:textColor="?android:colorPrimary"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_pay_method"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/metode_pembayaran"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pay_value" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_rectangle_bg_primary"
        android:text="@string/bayar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>